# swimmer-time-usaswim

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
config/: config.yaml
notebooks/: dev.ipynb
src/swimmer_time/: cli.py  scraper.py
